# igaming-intelligence-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  paths.py  pyproject.toml  requirements.txt  run_pipeline.py  scheduler.py  setup.sh  verify_fixes.sh
.github/workflows/: ci.yml  keep_alive.yml  scheduled_pipeline.yml
.streamlit/: config.toml
app/: dashboard.py
config/: sources.json
configs/: brand_tokens.yml  reader_advantages.yml
data/: company_contexts_for_enrichment.json  company_metadata_auto.json  daily_analysis.json  daily_briefing.md  gemini_cache.json  latest_competitor_news.json  latest_run_info.json
data/outputs/: audience_edge_latest.csv  commercial_levers_latest.csv  editorial_wins_latest.csv
docs/: CLUSTERING_COMPARISON.md  DEPLOYMENT.md
docs/archive/: CURSOR_PROMPTS_DEC18.md  PR_THREE_CRITICAL_FIXES.md  REPO_CLEANUP_SUMMARY.md
docs/audits/: DEFECT_HUNT_REPORT.md  FINAL_AUDIT_REPORT.md  P0-4_DROPDOWN_FIX.md  P0-4_REAL_ROOT_CAUSE.md  PRODUCTION_AUDIT.md  RELIABILITY_AUDIT.md
docs/guides/: CLARION_STRENGTHS_GUIDE.md  CLUSTERING_GUIDE.md  COMPANY_CONTEXTS_GUIDE.md  COMPANY_ENRICHMENT_GUIDE.md  DEDUPE_HISTORY_GUIDE.md  EVIDENCE_LINKING_GUIDE.md  GIT_PUSH_GUIDE.md  ML_TOPIC_CLASSIFIER_GUIDE.md  PIPELINE_GUIDE.md  PORTFOLIO_STRENGTHS_GUIDE.md  TAXONOMY_GUIDE.md
docs/implementation/: FILE_PATH_STANDARDIZATION.md  ML_IMPLEMENTATION_SUMMARY.md  PATH_UNIFICATION_SUMMARY.md  REFACTORING_SUMMARY.md
scripts/: __init__.py  analysis.py  backfill_2025.py  check_models.py  cleanup_affiliate_category.py  cleanup_duplicate_urls.py  cleanup_old_outputs.py  cleanup_repo.py  cleanup_root.py  debug_search_parity.py  enrich_company_metadata.py  main.py  migrate_add_affiliate_flag.py  migrate_affiliate_categories.py  reader_advantages.py  unify_data.py
src/: _version.py  analysis_differentiators.py  config.py  differentiators.py  differentiators_v2.py  fulltext_search.py  gemini_cache.py  gemini_ner_analysis.py  llm_client.py  metrics.py  reader_advantages.py  reader_advantages_v2.py  reader_topics.py  search.py  search_gemini.py  taxonomy.py  textnorm.py  topic_classifier.py
tests/: conftest.py  e2e_idempotency.py  test_analysis_batching.py  test_analysis_differentiators.py  test_analysis_window.py  test_analysis_window_alignment.py  test_blocklist.py  test_briefing_coherence.py  test_briefs_render.py  test_context_explorer.py  test_count_sanity.py  test_data_integrity.py  test_dedupe.py  test_differentiators.py  test_differentiators_v2.py  test_fix_feed_sort.py  test_fix_fulltext_search.py  test_fix_window_alignment.py  test_gaps_dropdown.py  test_gemini_ner_fallbacks.py  test_llm_client.py  test_llm_eval.py  test_reader_advantages.py  test_reader_advantages_new.py  test_reader_topics.py  test_reader_wins.py  test_search.py  test_search_all_time.py  test_search_unified.py  test_strengths.py
(+14 files in other folders)
