[project]
name = "spying-gaming-competitors-clarion"
version = "1.0.0"
description = "iGaming Competitive Intelligence Dashboard"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (needed for sys.path manipulation)
    "E741",   # ambiguous variable name (l, O, I) - context makes meaning clear
    "B007",   # loop control variable not used (common with iterrows)
    "B008",   # function call in argument defaults
    "B904",   # raise from
    "B905",   # zip() without strict= parameter (backwards compat)
    "C401",   # unnecessary generator (rewrite as comprehension)
    "C408",   # unnecessary dict() call
    "C416",   # unnecessary dict comprehension
    "F401",   # imported but unused (often for side effects or try/except imports)
    "F841",   # local variable assigned but never used (common in iterative dev)
    "N803",   # argument name should be lowercase (math formulas use uppercase)
    "N806",   # variable in function should be lowercase (constants in functions ok)
    "UP012",  # unnecessary utf-8 encoding argument
    "UP015",  # unnecessary mode argument for open
    "UP017",  # use datetime.UTC alias
    "UP024",  # replace aliased errors with OSError
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["src", "app", "scripts", "paths"]

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src", "app", "scripts"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselected by default)",
]
filterwarnings = [
    # Ignore Click 9.0 deprecation warnings from third-party libraries
    "ignore:'BaseCommand' is deprecated:DeprecationWarning",
    "ignore:Importing 'parser.split_arg_string':DeprecationWarning",
    # Ignore sklearn convergence warnings in clustering tests (expected with small datasets)
    "ignore:Number of distinct clusters:sklearn.exceptions.ConvergenceWarning",
]
